src/styles.css
* {
  margin: 0;
  padding: 0;
}
header {
  background: black;
}
.signup-banner {
  color: white;
  margin-bottom: 0;
  padding: 5px;
  text-align: center;
}
.main {
  background: url("/images/airforce.png");
  background-repeat: no-repeat;
  background-size: cover;
  height: 80vh;
  width: 100%;
}

.links {
  display: flex;
  justify-content: space-between;
}
.logo {
  font-size: 25px !important;
  margin-top: 15px;
  padding-left: 20px;
}
.links .logo {
  color: black;
  font-size: 20px;
  font-weight: bolder;
  text-decoration: none;
}
.navbar {
  font-weight: bold;
  margin-top: -19px;
  padding: 10px;
}
.links .navbar a {
  color: black;
  padding: 30px;
  text-decoration: none;
}
.links .navbar a:hover {
  text-decoration: underline;
}
.cart-number {
  font-size: 13px;
}
.promotion {
  color: black;
  font-size: 95px;
  margin-top: 200px !important;
  padding-left: 15px;
  text-transform: uppercase;
}
#shop-now-button {
  background-color: transparent;
  border: 1px solid black;
  border-radius: 50px;
  color: black;
  cursor: pointer;
  font-size: 15px;
  font-weight: 100;
  margin-bottom: 30px;
  margin-left: 15px;
  margin-top: 15px;
  padding: 20px;
}
#shop-now-button:hover {
  background-color: black;
  box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24),
    0 17px 50px 0 rgba(0, 0, 0, 0.19);
  color: white;
  transition: all ease-in-out 150ms;
}
.promo-banner {
  background: rgb(119, 180, 208);
  overflow: hidden;
  padding: 10px;
  position: relative;
  top: 16px;
  white-space: nowrap;
}
.promos {
  animation: promo-banner 70s linear infinite;
  display: flex;
  justify-content: space-evenly;
  transform: translateX(100%);
}
h2 {
  margin: 60px 30px;
}
.sandals {
  display: flex;
  justify-content: space-around;
}
.sandal1:hover {
  transform: scale(1.2);
  transition: all ease-in-out 250ms;
}
.sandal2:hover {
  transform: scale(1.2);
  transition: all ease-in-out 250ms;
}
.sandal3:hover {
  transform: scale(1.2);
  transition: all ease-in-out 250ms;
}
.sandal4:hover {
  transform: scale(1.2);
  transition: all ease-in-out 250ms;
}
.shoe-names {
  display: flex;
  font-size: 20px;
  justify-content: space-around;
  left: -115px;
  margin-top: 8px;
  position: relative;
}
hr {
  display: none;
}
.featured-collection {
  background-color: #f1f1f3;
  height: 60vh;
  margin-top: 80px;
  width: 100%;
}
.collection-title {
  font-size: 15px;
  margin-top: 30px;
  text-align: left;
  text-transform: uppercase;
}
.sandal5 {
  height: 60vh;
  padding: 10px;
  position: relative;
  right: 40px;
  width: 100%;
}
.collection-p {
  font-size: 50px;
  margin-top: 20px;
  padding: 0;
  text-align: left;
  text-transform: uppercase;
}
#collection-button {
  background-color: transparent;
  border: 1px solid black;
  border-radius: 50px;
  color: black;
  cursor: pointer;
  font-size: 15px;
  margin-top: -15px;
  padding: 20px;
  position: relative;
  right: 155px;
}
#collection-button:hover {
  background-color: black;
  box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24),
    0 17px 50px 0 rgba(0, 0, 0, 0.19);
  color: white;
  transition: all ease-in-out 150ms;
}
.sandal6 {
  height: 45vh;
  left: 40px;
  padding: 10px;
  position: relative;
  top: 110px;
  width: 100%;
}
.about-us {
  font-size: 50px;
  font-weight: 100;
}
.womens-title {
  display: flex;
  font-size: 45px;
  justify-content: space-between;
  padding: 20px;
}

.sneaker {
  background: #eaeaee;
  margin: 10px;
  padding: 10px;
  width: 100%;
}
.newsletter {
  background: #2070af;
  height: 70vh;
  width: 100%;
}
.subscribe-tag {
  position: relative;
  display: block;
  text-align: center;
  text-transform: uppercase;
  top: 70px;
}
.newsletter-tag {
  color: black;
  display: block;
  font-size: 150px;
  letter-spacing: 5px;
  text-align: center;
  top: 60px;
  position: relative;
  text-transform: uppercase;
}
.email-box {
  padding: 20px;
  display: block;
  font-size: 12px;
  margin: 0 auto;
  top: 90px;
  position: relative;
  width: 20%;
  text-align: left;
}
#sign-up-button {
  background-color: transparent;
  border: 3px solid black;
  border-radius: 50px;
  color: black;
  cursor: pointer;
  font-size: 15px;
  left: 670px;
  margin: 0 auto;
  padding: 20px;
  position: relative;
  text-transform: uppercase;
  top: 110px;
}
#sign-up-button:hover {
  background-color: black;
  box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24),
    0 17px 50px 0 rgba(0, 0, 0, 0.19);
  color: white;
  transition: all ease-in-out 150ms;
}
.sneaker-pile {
  height: 50vh;
  width: 100%;
}
.footer {
  background: black;
  color: white;
  height: 15vh;
  width: 100%;
}
.col {
  margin-top: 10px;
}
ul {
  list-style: none;
  text-align: left;
}
#col-bio {
  font-size: 10px;
}
#col-bio a {
  color: grey;
  text-decoration: none;
}
#col-bio a:hover {
  color: grey;
  text-decoration: underline;
}

@keyframes promo-banner {
  from {
    transform: translateX(100%);
  }
  to {
    transform: translateX(-100%);
  }
}
@media (max-width: 680px) {
  .signup-banner {
    font-size: 12px;
  }
  .logo {
    font-size: 20px !important;
    margin-top: 5px;
    padding-left: 10px;
  }
  h3 {
    font-size: 70px !important;
  }
  .promo-banner {
    font-size: 3vw;
    padding: 10px;
    position: relative;
    top: 60px;
  }
  .promos {
    justify-content: space-evenly;
  }
  .navbar a {
    padding: 4px !important;
    font-size: 10px;
    margin-top: 17px;
    left: 20px;
  }
  #new-in {
    font-size: 50px;
    margin: 60px 20px 10px 20px;
  }
  .sandals {
    display: flex;
    flex-wrap: wrap;
    grid-gap: 10px;
    padding: 0;
  }
  .sandal1:hover,
  .sandal2:hover,
  .sandal3:hover,
  .sandal4:hover {
    transform: none;
  }
  .shoe-names {
    display: none;
  }
  hr {
    display: flex;
  }
  .womens-title {
    display: flex;
    font-size: 17px;
    font-weight: 700;
    justify-content: space-between;
    top: 40px;
    padding: 0px 5px 20px 5px;
    position: relative;
  }
  #womens-sneakers {
    position: relative;
    right: 10px;
  }

  #about-us {
    font-size: 30px;
    margin: 10px;
    text-align: left;
  }

  #collections {
    display: none;
  }
  .sneaker-pile {
    height: 15vh;
    width: 100%;
  }
  #newsletter {
    height: 60vh;
  }
  .newsletter-tag {
    font-size: 50px;
  }
  .email-box {
    width: 70%;
  }
  #sign-up-button {
    margin: 0 auto;
    left: 150px;
    position: relative;
    top: 200;
  }
  .footer {
    font-size: 10px;
  }
  ul {
    font-size: 9px;
  }
  #col-bio {
    font-size: 8px;
  }
}

